RESOLVED FIXED283405
[GStreamer] Fix a couple unsafe-buffer-usage warnings
https://bugs.webkit.org/show_bug.cgi?id=283405
Summary [GStreamer] Fix a couple unsafe-buffer-usage warnings
Philippe Normand
Reported 2024-11-20 01:16:10 PST
.
Attachments
Philippe Normand
Comment 1 2024-11-20 01:18:10 PST
EWS
Comment 2 2024-11-21 05:55:30 PST
Committed 286906@main (e948c7ca0fa1): <https://commits.webkit.org/286906@main> Reviewed commits have been landed. Closing PR #36883 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-11-21 05:56:14 PST
Note You need to log in before you can comment on or make changes to this bug.