[GStreamer] Fix a couple unsafe-buffer-usage warnings https://bugs.webkit.org/show_bug.cgi?id=283405

Reviewed by Adrian Perez de Castro and Xabier Rodriguez-Calvar.

* Source/WebCore/platform/graphics/gstreamer/GStreamerCommon.cpp:
(WebCore::registerWebKitGStreamerElements):
* Source/WebCore/platform/graphics/gstreamer/GStreamerRegistryScanner.cpp:
(WebCore::GStreamerRegistryScanner::fillVideoRtpCapabilities):
* Source/WebCore/platform/graphics/gstreamer/WebKitWebSourceGStreamer.cpp:
(webKitWebSrcGetProtocols):

Canonical link: https://commits.webkit.org/286906@main