Source/WebCore/platform/graphics/gstreamer/WebKitWebSourceGStreamer.cpp
@@ -880,14 +880,8 @@ static GstURIType webKitWebSrcUriGetType(GType)
 
 const gchar* const* webKitWebSrcGetProtocols(GType)
 {
-    WTF_ALLOW_UNSAFE_BUFFER_USAGE_BEGIN // GLib port
-    static const char* protocols[4];
-    protocols[0] = "http";
-    protocols[1] = "https";
-    protocols[2] = "blob";
-    protocols[3] = nullptr;
-    WTF_ALLOW_UNSAFE_BUFFER_USAGE_END
-    return protocols;
+    static std::array<const char*, 4> protocols { "http", "https", "blob" };
+    return protocols.data();
 }
 
 static URL convertPlaybinURI(const char* uriString)
